# mp-knowledge-atlas

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
articles/: agent-architecture.md  ai-coding.md  harness-engineering.md  index.md  industry-insights.md  knowledge-management.md
docs/: PRD.md  architecture.md
docs/superpowers/plans/: 2026-05-21-knowledge-map-mvp.md  2026-05-22-frontend-redesign.md  2026-05-22-pipeline-v2-fulltext-redesign.md
docs/superpowers/specs/: 2026-05-21-knowledge-map-mvp-design.md  2026-05-22-frontend-redesign-design.md  2026-05-22-graph-label-fix-handoff.md  2026-05-22-graph-visual-optimization.md  2026-05-22-pipeline-v2-fulltext-redesign.md
scripts/: migrate_markdown.py
site/: index.html  package.json  pnpm-lock.yaml
site/.vitepress/: config.ts
site/assets/: app.css  app.js  network-graph.js
site/docs/: index.md
site/docs/articles/: 1.md  10.md  11.md  12.md  13.md  (+48 more)
src/: clean.py  cluster.py  embed.py  ingest.py  name.py  network.py  publish.py  summarize.py
src/lib/: db.py  embedding.py  html.py  llm.py  parse.py  tfidf_fallback.py  vec.py
templates/: article.md.j2  domain.md.j2  index.md.j2  network.html.j2
tests/fixtures/: mini_index.md  regression_snapshot.json
tests/integration/: test_embed.py  test_migrate.py  test_name.py  test_pipeline_e2e.py  test_regression.py
tests/unit/: test_clean.py  test_cluster.py  test_db.py  test_embedding.py  test_html.py  test_ingest.py  test_llm.py  test_network.py  test_parse.py  test_publish.py  test_summarize.py  test_tfidf_fallback.py  test_vec.py
(+12 files in other folders)
