[project]
name = "tech-articles-collector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.3.0",
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "hdbscan>=0.8.38",
    "scikit-learn>=1.5.0",
    "networkx>=3.3",
    "jieba>=0.42.1",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "tenacity>=8.5.0",
]

[dependency-groups]
dev = ["pytest>=8.3.0", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=src --cov-report=term-missing"
